--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 
         <!-- Total -->
         <div class="total">
-          <h2 class="total__title"> Tip Amount<span class="advice">/ person</span></h2>
+          <h2 class="total__title"> Total<span class="advice">/ person</span></h2>
           <p class="total__amount-per-person">$0.00</p>
         </div>
 
         <!-- Reset -->
-        <button class="btn btn-reset">Reset</button>
+        <button class="btn btn-reset disabled">Reset</button>
       </section>
     </main>
 
