--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <h2 class="bill__title">Bill</h2>
           <label for="bill" class="input__label"></label>
           <span class="input__warning">Can't be zero</span>
-          <input type="number" name="bill" id="bill" class="input__field" placeholder="0">
+          <input type="number" name="bill" id="bill" class="input__field" placeholder="0" maxlength="8">
         </section>
         <!-- Tip -->
         <section class="tip">
@@ -46,7 +46,9 @@
             <button data-value="1.25" class="btn btn-tip">25%</button>
             <button data-value="1.5" class="btn btn-tip">50%</button>
             <label for="custom-tip"></label>
-            <input type="number" name="custom-tip" id="custom-tip" class="btn input-custom" placeholder="Custom">
+            <span class="input__warning"></span>
+            <input type="number" name="custom-tip" id="custom-tip" class="btn input-custom" placeholder="Custom"
+              maxlength="3">
           </div>
         </section>
         <!-- People -->
@@ -54,7 +56,7 @@
           <h2 class="people__title">Number of People</h2>
           <label for="people" class="input__label input__label--people-icon"></label>
           <span class="input__warning">Can't be zero</span>
-          <input type="number" name="people" id="people" placeholder="0" class="input__field" data-warning="">
+          <input type="number" name="people" id="people" placeholder="0" class="input__field" maxlength="3">
         </section>
       </div>
 
